tailwindcss theme setup with custom screens, container, and fontFamily

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="bg-slate-50">
-      <h1 class="text-red-500">heloow world!</h1>
-    </div>
+    <h1
+      class="bg-green-500 text-3xl sm:bg-red-500 font-jost font-lobster lg:bg-purple-500 text-white underline container"
+    >
+      heloow world!
+    </h1>
   </body>
 </html>
