html skeleton setup

--- a/index.html
+++ b/index.html
@@ -3,14 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Favicon -->
+
+    <!-- Remix Icon -->
+
+    <!-- Swiper's CSS -->
+
+    <!-- Title -->
     <title>TailSprout</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1
-      class="bg-green-500 text-3xl sm:bg-red-500 font-jost font-lobster lg:bg-purple-500 text-white underline container"
-    >
-      heloow world!
-    </h1>
+    <!-- Header -->
+    <header id="navbar"></header>
+
+    <!-- Main -->
+    <main>
+      <!-- Home -->
+      <section id="home"></section>
+
+      <!-- Services -->
+      <section id="services"></section>
+
+      <!-- About use -->
+      <section id="about"></section>
+
+      <!-- Popular -->
+      <section id="popular"></section>
+
+      <!-- Review -->
+      <section id="review"></section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+      <!-- newsletter -->
+
+      <!-- social icons -->
+
+      <!-- content -->
+
+      <!-- copyright -->
+
+      <!-- floral image -->
+    </footer>
+
+    <!-- Scroll up -->
+
+    <!-- Swiper JS -->
+
+    <!-- ScrollReveal -->
+
+    <!-- mainjs -->
   </body>
 </html>
