--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- lg:get to inital document flow: static -->
         <div
           id="nav-menu"
-          class="absolute lg:static top-0 left-[-100%] min-h-[80vh] lg:min-h-fit w-full lg:w-auto bg-green-950/80 lg:bg-transparent backdrop-blur-sm lg:backdrop-blur-0 flex items-center justify-center duration-300 overflow-hidden"
+          class="absolute lg:static top-0 left-[-100%] min-h-[100vh] lg:min-h-fit w-full lg:w-auto bg-green-950/80 lg:bg-transparent backdrop-blur-sm lg:backdrop-blur-0 flex items-center justify-center duration-300 overflow-hidden"
         >
           <ul class="flex flex-col gap-8 lg:flex-row">
             <li><a href="#home" class="nav-link">Home</a></li>
@@ -71,9 +71,18 @@
     <!-- Main -->
     <main>
       <!-- Home -->
-      <section id="home">
+      <section id="home" class="relative">
         <!-- Hero Container -->
         <div class="container">
+          <!-- Bolb center -->
+          <div
+            class="w-64 h-64 bg-green-700 rounded-full blur-3xl -z-10 opacity-40 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"
+          ></div>
+          <!-- Bolb right bottom -->
+          <div
+            class="w-64 h-64 bg-green-700 rounded-full blur-3xl -z-10 opacity-40 absolute right-0 bottom-0"
+          ></div>
+
           <!-- Hero Flex Container -->
           <div class="flex flex-col lg:flex-row items-center gap-5">
             <!--  Content -->
