services section added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <!-- Main -->
     <main>
-      <!-- Home -->
+      <!-- --------Hero------------- -->
       <section id="home" class="relative">
         <!-- Hero Container -->
         <div class="container">
@@ -89,15 +89,15 @@
             <div class="w-full space-y-5 lg:w-1/2">
               <!-- Hero Heading -->
               <h1>
-                <span class="text-yellow-500">Plants</span> make a <br />
-                positive
-                <span class="text-yellow-500">impact</span> on <br />
-                your environment
+                <span class="text-yellow-500">Sprout</span> a positive <br />
+                change and <span class="text-yellow-500">impact</span> <br />
+                your world
               </h1>
               <p class="text-slate-300 font-lobster">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Distinctio fugiat eveniet, reprehenderit veritatis aut explicabo
-                voluptatum ullam itaque tenetur numquam!
+                Plants do more than beautify—they purify, energize, and
+                transform your environment. At TailSprouts, we’re here to help
+                you cultivate green spaces that inspire growth and positivity in
+                every corner of your life.
               </p>
 
               <!-- Buttons: shop & learn more -->
@@ -161,8 +161,82 @@
         </div>
       </section>
 
-      <!-- Services -->
-      <section id="services"></section>
+      <!-- ------------ Services----------------- -->
+      <div id="services" class="bg-white text-green-900 py-20">
+        <div
+          class="container w-full grid grid-cols-1 gap-8 md:grid-cols-2 xl:grid-cols-4"
+        >
+          <!-- Card 1 -->
+          <div
+            class="border border-green-900 cursor-pointer p-5 rounded-md hover:-translate-y-1 hover:shadow-2xl duration-300 space-y-5"
+          >
+            <div class="flex gap-5 items-center">
+              <i class="ri-truck-line text-3xl md:text-4xl lg:text-5xl"></i>
+              <p class="font-bold md:text-lg">
+                Fast <br />
+                Delivery
+              </p>
+            </div>
+            <p class="font-lobster">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Accusantium, ut.
+            </p>
+          </div>
+
+          <!-- Card 2 -->
+          <div
+            class="border border-green-900 cursor-pointer p-5 rounded-md hover:-translate-y-1 hover:shadow-2xl duration-300 space-y-5"
+          >
+            <div class="flex gap-5 items-center">
+              <i
+                class="ri-customer-service-line text-3xl md:text-4xl lg:text-5xl"
+              ></i>
+              <p class="font-bold md:text-lg">
+                Great Customer <br />
+                Service
+              </p>
+            </div>
+            <p class="font-lobster">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Accusantium, ut.
+            </p>
+          </div>
+          <!-- Card 3 -->
+          <div
+            class="border border-green-900 cursor-pointer p-5 rounded-md hover:-translate-y-1 hover:shadow-2xl duration-300 space-y-5"
+          >
+            <div class="flex gap-5 items-center">
+              <i class="ri-plant-line text-3xl md:text-4xl lg:text-5xl"></i>
+              <p class="font-bold md:text-lg">
+                Orignal <br />
+                Plants
+              </p>
+            </div>
+            <p class="font-lobster">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Accusantium, ut.
+            </p>
+          </div>
+          <!-- Card 1 -->
+          <div
+            class="border border-green-900 cursor-pointer p-5 rounded-md hover:-translate-y-1 hover:shadow-2xl duration-300 space-y-5"
+          >
+            <div class="flex gap-5 items-center">
+              <i
+                class="ri-money-dollar-circle-line text-3xl md:text-4xl lg:text-5xl"
+              ></i>
+              <p class="font-bold md:text-lg">
+                Affordable <br />
+                Price
+              </p>
+            </div>
+            <p class="font-lobster">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Accusantium, ut.
+            </p>
+          </div>
+        </div>
+      </div>
 
       <!-- About use -->
       <section id="about"></section>
