--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </section>
 
       <!-- ------------ Services----------------- -->
-      <div id="services" class="bg-white text-green-900 py-20">
+      <section id="services" class="bg-white text-green-900 py-20">
         <div
           class="container w-full grid grid-cols-1 gap-8 md:grid-cols-2 xl:grid-cols-4"
         >
@@ -236,10 +236,91 @@
             </p>
           </div>
         </div>
-      </div>
+      </section>
 
-      <!-- About use -->
-      <section id="about"></section>
+      <!-- About Us -->
+      <section id="about" class="relative overflow-hidden">
+        <!-- Corner Leaf -->
+        <div class="absolute -top-6 -right-12 opacity-50">
+          <img
+            src="assets/img/leaf-3.png"
+            alt="leaf_image"
+            class="w-40 md:w-52 xl:w-64"
+          />
+        </div>
+
+        <div
+          class="flex flex-col items-center gap-3 text-center mb-10 md:mb:20"
+        >
+          <h2 class="title">About Us</h2>
+          <p class="max-w-2xl">Follow instruction for more</p>
+        </div>
+
+        <div class="container space-y-10 xl:space-y-0">
+          <!-- item 1 -->
+          <div class="flex flex-col lg:flex-row gap-5">
+            <!-- image -->
+            <div class="w-full lg:w-1/2">
+              <img
+                src="assets/img/plant-1.png"
+                alt="about_image"
+                class="w-full sm:w-2/3 lg:w-full xl:w-2/3 mx-auto"
+              />
+            </div>
+            <!-- Content -->
+            <div class="w-full lg:w-1/2">
+              <div class="space-y-5">
+                <!-- Content_Heading -->
+                <h3>
+                  Make your <span class="text-yellow-500">organic</span> <br />
+                  garden
+                </h3>
+                <!-- text -->
+                <p class="text-slate-300 font-lobster">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+                  quas sit eius est maiores ut odit similique expedita soluta
+                  placeat ullam, mollitia quo, dolores cupiditate, labore
+                  facilis non dicta sunt? Nemo odit dolor non harum officia
+                  molestias eaque similique aut quidem. Veniam quasi accusamus
+                  culpa odio quod, consequatur tempore vitae?
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- item 2 -->
+          <div class="flex flex-col lg:flex-row lg:flex-row-reverse gap-5">
+            <!-- image -->
+            <div class="w-full lg:w-1/2">
+              <img
+                src="assets/img/plant-2.png"
+                alt="about_image"
+                class="w-full sm:w-2/3 lg:w-full xl:w-2/3"
+              />
+            </div>
+            <!-- Content -->
+            <div class="w-full lg:w-1/2">
+              <div class="space-y-5">
+                <!-- Content_Heading -->
+                <h3>
+                  Come with us
+                  <span class="text-yellow-500">grow up</span> <br />
+                  your plant
+                </h3>
+                <!-- text -->
+                <p class="text-slate-300 font-lobster">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+                  quas sit eius est maiores ut odit similique expedita soluta
+                  placeat ullam, mollitia quo, dolores cupiditate, labore
+                  facilis non dicta sunt? Nemo odit dolor non harum officia
+                  molestias eaque similique aut quidem. Veniam quasi accusamus
+                  culpa odio quod, consequatur tempore vitae?
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- Popular -->
       <section id="popular"></section>
