--- a/index.html
+++ b/index.html
@@ -323,7 +323,141 @@
       </section>
 
       <!-- Popular -->
-      <section id="popular"></section>
+      <section id="popular" class="bg-green-900">
+        <!-- Popular__Heading -->
+        <div class="flex flex-col items-center gap-3 text-center mb-40">
+          <h2 class="title">Your Choice Plant</h2>
+          <p class="max-w-2xl">Follow instruction for more</p>
+        </div>
+
+        <!-- Popular__Content -->
+        <div
+          class="container w-full grid grid-cols-1 gap-x-8 gap-y-36 lg:grid-cols-2 xl:grid-cols-4"
+        >
+          <!--Popular Card 1-->
+          <div class="popular_card bg-green-950 p-10 pt-24 rounded-md relative">
+            <!-- Card__img -->
+            <img
+              src="assets/img/cart-1.png"
+              alt="popular_image"
+              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500"
+            />
+
+            <!-- Card__heading -->
+            <p class="italic">Nephrolepis exaltata</p>
+            <h3>Boston Fern</h3>
+
+            <!-- Card__Review Stars -->
+            <div class="text-yellow-500 text-sm py-3">
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-half-fill"></i>
+              <i class="ri-star-line"></i>
+              <i class="ri-star-line"></i>
+            </div>
+
+            <!-- Card__Price -->
+            <div class="flex items-center justify-between">
+              <p class="text-xl">$5</p>
+              <button class="bg-yellow-500 px-2 py-2 rounded-sm text-xl">
+                <i class="ri-shopping-cart-fill"></i>
+              </button>
+            </div>
+          </div>
+
+          <!--Popular Card 2-->
+          <div class="popular_card bg-green-950 p-10 pt-24 rounded-md relative">
+            <!-- Card__img -->
+            <img
+              src="assets/img/cart-2.png"
+              alt="popular_image"
+              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500"
+            />
+
+            <!-- Card__heading -->
+            <p class="italic">Ficus elastica</p>
+            <h3>Rubber Plant</h3>
+
+            <!-- Card__Review Stars -->
+            <div class="text-yellow-500 text-sm py-3">
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-half-fill"></i>
+              <i class="ri-star-line"></i>
+              <i class="ri-star-line"></i>
+            </div>
+
+            <!-- Card__Price -->
+            <div class="flex items-center justify-between">
+              <p class="text-xl">$5</p>
+              <button class="bg-yellow-500 px-2 py-2 rounded-sm text-xl">
+                <i class="ri-shopping-cart-fill"></i>
+              </button>
+            </div>
+          </div>
+
+          <!--Popular Card 3-->
+          <div class="popular_card bg-green-950 p-10 pt-24 rounded-md relative">
+            <!-- Card__img -->
+            <img
+              src="assets/img/cart-3.png"
+              alt="popular_image"
+              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500"
+            />
+
+            <!-- Card__heading -->
+            <p class="italic">Spathiphyllum wallisii</p>
+            <h3>Peace Lily</h3>
+
+            <!-- Card__Review Stars -->
+            <div class="text-yellow-500 text-sm py-3">
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-half-fill"></i>
+              <i class="ri-star-line"></i>
+              <i class="ri-star-line"></i>
+            </div>
+
+            <!-- Card__Price -->
+            <div class="flex items-center justify-between">
+              <p class="text-xl">$5</p>
+              <button class="bg-yellow-500 px-2 py-2 rounded-sm text-xl">
+                <i class="ri-shopping-cart-fill"></i>
+              </button>
+            </div>
+          </div>
+          <!--Popular Card 4-->
+          <div class="popular_card bg-green-950 p-10 pt-24 rounded-md relative">
+            <!-- Card__img -->
+            <img
+              src="assets/img/cart-4.png"
+              alt="popular_image"
+              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500"
+            />
+
+            <!-- Card__heading -->
+            <p class="italic">Adenium obesum</p>
+            <h3>Desert Rose</h3>
+
+            <!-- Card__Review Stars -->
+            <div class="text-yellow-500 text-sm py-3">
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-half-fill"></i>
+              <i class="ri-star-line"></i>
+              <i class="ri-star-line"></i>
+            </div>
+
+            <!-- Card__Price -->
+            <div class="flex items-center justify-between">
+              <p class="text-xl">$5</p>
+              <button class="bg-yellow-500 px-2 py-2 rounded-sm text-xl">
+                <i class="ri-shopping-cart-fill"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- Review -->
       <section id="review"></section>
