line clamp added to reveiw

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                   <!-- Review 1 Container -->
                   <div class="flex flex-col gap-5 bg-green-900 rounded-md p-6">
                     <!-- Review Comment -->
-                    <p class="font-lobster">
+                    <p class="font-lobster line-clamp-3 hover:line-clamp-none">
                       The plants arrived in perfect condition, and the
                       eco-friendly packaging was a bonus. My fiddle leaf fig
                       looks stunning in my living room!”
@@ -511,7 +511,7 @@
                       />
                       <!-- Reviewer Name and Profession -->
                       <div class="ml-2">
-                        <p class="text-yellow-500 uppercase">Babita Thapa</p>
+                        <p class="text-yellow-500 uppercase">Priya Sharma</p>
                         <p>Designer</p>
                       </div>
                       <i class="ri-double-quotes-r text-4xl ml-auto"></i>
@@ -523,7 +523,7 @@
                   <!-- Review 2 Container -->
                   <div class="flex flex-col gap-5 bg-green-900 rounded-md p-6">
                     <!-- Review Comment -->
-                    <p class="font-lobster">
+                    <p class="font-lobster line-clamp-3 hover:line-clamp-none">
                       Great quality plants and super helpful care tips. My
                       monstera is thriving, and I couldn’t be happier!
                     </p>
@@ -548,7 +548,7 @@
                   <!-- Review 3 Container -->
                   <div class="flex flex-col gap-5 bg-green-900 rounded-md p-6">
                     <!-- Review Comment -->
-                    <p class="font-lobster">
+                    <p class="font-lobster line-clamp-3 hover:line-clamp-none">
                       Beautiful plants that instantly brightened up my café.
                       Customers love the greenery, and so do I!
                     </p>
@@ -573,7 +573,7 @@
                   <!-- Review 1 Container -->
                   <div class="flex flex-col gap-5 bg-green-900 rounded-md p-6">
                     <!-- Review Comment -->
-                    <p class="font-lobster">
+                    <p class="font-lobster line-clamp-3 hover:line-clamp-none">
                       As a beginner, the care guides were a lifesaver. My peace
                       lily is growing beautifully—highly recommend!
                     </p>
@@ -586,7 +586,7 @@
                       />
                       <!-- Reviewer Name and Profession -->
                       <div class="ml-2">
-                        <p class="text-yellow-500 uppercase">Priya Sharma</p>
+                        <p class="text-yellow-500 uppercase">Babita Thapa</p>
                         <p>Home Baker</p>
                       </div>
                       <i class="ri-double-quotes-r text-4xl ml-auto"></i>
