--- a/index.html
+++ b/index.html
@@ -603,10 +603,54 @@
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer class="bg-yellow-100 text-green-950 pt-20 pb-10 md:pt-28 relative">
       <!-- newsletter -->
+      <!--  Container -->
+      <div
+        class="container text-white absolute top-0 right-0 left-0 -translate-y-1/2"
+      >
+        <!-- Content -->
+        <div class="bg-green-900 px-10 pt-5 pb-10 space-y-5 rounded-md">
+          <!-- newletter heading -->
+          <h3>
+            <span class="text-yellow-500">Subscribe</span> to our newsletter
+            Subscribe
+          </h3>
+
+          <div class="flex flex-col md:flex-row gap-2">
+            <input
+              class="w-full px-5 py-3 text-green-900 outline-none rounded-md"
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Your Email Address"
+            />
+
+            <button
+              class="flex items-center justify-center gap-1 bg-green-950 px-5 py-3 rounded-md hover:opacity-80 duration-300 group group-hover:duration-300"
+            >
+              <span>Subscribe</span>
+              <i
+                class="ri-send-plane-2-line transform duration-300 group-hover:translate-x-2"
+              ></i>
+            </button>
+          </div>
+        </div>
+      </div>
 
       <!-- social icons -->
+      <div class="container mt-16 mb-10">
+        <div class="border-b border-green-500 relative">
+          <div
+            class="absolute top-0 transform -translate-y-1/2 left-0 right-0 max-w-36 mx-auto"
+          >
+            <i class="ri-facebook-fill"></i>
+            <i class="ri-twitter-x-line"></i>
+            <i class="ri-instagram-line"></i>
+            <i class="ri-linkedin-fill"></i>
+          </div>
+        </div>
+      </div>
 
       <!-- content -->
 
