footer social icon added

--- a/index.html
+++ b/index.html
@@ -605,7 +605,6 @@
     <!-- Footer -->
     <footer class="bg-yellow-100 text-green-950 pt-20 pb-10 md:pt-28 relative">
       <!-- newsletter -->
-      <!--  Container -->
       <div
         class="container text-white absolute top-0 right-0 left-0 -translate-y-1/2"
       >
@@ -644,10 +643,20 @@
           <div
             class="absolute top-0 transform -translate-y-1/2 left-0 right-0 max-w-36 mx-auto"
           >
-            <i class="ri-facebook-fill"></i>
-            <i class="ri-twitter-x-line"></i>
-            <i class="ri-instagram-line"></i>
-            <i class="ri-linkedin-fill"></i>
+            <div class="bg-yellow-100 text-lg text-center space-x-2">
+              <i
+                class="ri-facebook-fill hover:text-yellow-500 duration-300 cursor-pointer"
+              ></i>
+              <i
+                class="ri-twitter-x-line text-base hover:text-yellow-500 duration-300 cursor-pointer"
+              ></i>
+              <i
+                class="ri-instagram-line hover:text-yellow-500 duration-300 cursor-pointer"
+              ></i>
+              <i
+                class="ri-linkedin-fill hover:text-yellow-500 duration-300 cursor-pointer"
+              ></i>
+            </div>
           </div>
         </div>
       </div>
