footer completed with grid: log | quick link | popular services | contact us | copyright

--- a/index.html
+++ b/index.html
@@ -663,9 +663,87 @@
 
       <!-- content -->
 
+      <div
+        class="container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 text-center md:text-start"
+      >
+        <!-- Item 1: Logo-->
+        <div>
+          <div class="text-7xl text-green-700 text-center inline-block">
+            <i class="ri-leaf-fill"></i>
+            <p class="sm:text-2xl text-xl font-lobster">TailSprouts.</p>
+          </div>
+        </div>
+
+        <!-- Item 2 -->
+        <div class="">
+          <p class="mb-5 font-bold text-xl">Quick Link</p>
+          <div class="flex flex-col gap-1">
+            <a
+              href="#"
+              class="hover:text-yellow-500 cursor-pointer duration-300"
+              >Plants</a
+            >
+            <a
+              href="#"
+              class="hover:text-yellow-500 cursor-pointer duration-300"
+              >Flowers</a
+            >
+            <a
+              href="#"
+              class="hover:text-yellow-500 cursor-pointer duration-300"
+              >Gardening</a
+            >
+            <a
+              href="#"
+              class="hover:text-yellow-500 cursor-pointer duration-300"
+              >Seeds</a
+            >
+            <a
+              href="#"
+              class="hover:text-yellow-500 cursor-pointer duration-300"
+              >Shipping</a
+            >
+          </div>
+        </div>
+
+        <!-- Item 3 -->
+        <div class="">
+          <p class="mb-5 font-bold text-xl">Popular Services</p>
+          <div class="flex flex-col gap-1">
+            <a href="#">Tree Planting</a>
+            <a href="#">Grass Cutting</a>
+            <a href="#">Weeds Control</a>
+            <a href="#">Project</a>
+          </div>
+        </div>
+          <!-- Item 4 -->
+          <div class="">
+            <p class="mb-5 font-bold text-xl">Contact Us</p>
+            <div class="flex flex-col gap-1">
+              <a href="tel:+977-9818275115">+977-9818275115</a>
+              <a href="mailto:nisal.dev@gmail.com">nisal.dev@gmail.com</a>
+              <br/>
+              <p>Kathmandu, Nepal</p>
+            </div>
+          </div>
+      </div>
+
+
+      
+      </div>
       <!-- copyright -->
 
+      <div class="container">
+        <div class="text-center mt-10 opacity-50"> 
+          Copyright &copy; 2024 SageCraft. All rights reserved.
+
+        </div>
+      </div>
+
       <!-- floral image -->
+       <div class="absolute bottom-0 left-0 opacity-20 pointer-events-auto">
+        <img src="assets/img/floral-1.png" class="w-full lg:w-1/2" alt="floral_image">
+       </div>
     </footer>
 
     <!-- Scroll up -->
