group-hover animation added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header id="navbar" class="fixed w-full top-0 left-0 z-50">
+    <header id="navbar" class="fixed w-full top-0 bg-green-950 left-0 z-50">
       <!-- Navbar -->
       <nav class="container flex items-center justify-between h-16 sm:h-20">
         <!-- logo -->
@@ -42,7 +42,7 @@
           class="absolute lg:static top-0 left-[-100%] min-h-[100vh] lg:min-h-fit w-full lg:w-auto bg-green-950/80 lg:bg-transparent backdrop-blur-sm lg:backdrop-blur-0 flex items-center justify-center duration-300 overflow-hidden"
         >
           <ul class="flex flex-col gap-8 lg:flex-row">
-            <li><a href="#home" class="nav-link">Home</a></li>
+            <li><a href="#home" class="nav-link active ">Home</a></li>
             <li><a href="#about" class="nav-link">About</a></li>
             <li><a href="#popular" class="nav-link">Popular</a></li>
             <li><a href="#reviews" class="nav-link">Review</a></li>
@@ -340,12 +340,12 @@
           class="container w-full grid grid-cols-1 gap-x-8 gap-y-36 lg:grid-cols-2 xl:grid-cols-4"
         >
           <!--Popular Card 1-->
-          <div class=" popular_card bg-green-950 p-10 pt-24 rounded-md relative">
+          <div class="group popular_card bg-green-950 p-10 pt-24 rounded-md relative">
             <!-- Card__img -->
             <img
               src="assets/img/cart-1.png"
               alt="popular_image"
-              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500 "
+              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500 group-hover:animate-movingY "
             />
 
             <!-- Card__heading -->
@@ -371,12 +371,12 @@
           </div>
 
           <!--Popular Card 2-->
-          <div class="popular_card bg-green-950 p-10 pt-24 rounded-md relative">
+          <div class="group popular_card bg-green-950 p-10 pt-24 rounded-md relative">
             <!-- Card__img -->
             <img
               src="assets/img/cart-2.png"
               alt="popular_image"
-              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500"
+              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500 group-hover:animate-movingY "
             />
 
             <!-- Card__heading -->
@@ -402,12 +402,12 @@
           </div>
 
           <!--Popular Card 3-->
-          <div class="popular_card bg-green-950 p-10 pt-24 rounded-md relative">
+          <div class="group popular_card bg-green-950 p-10 pt-24 rounded-md relative">
             <!-- Card__img -->
             <img
               src="assets/img/cart-3.png"
               alt="popular_image"
-              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500"
+              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500 group-hover:animate-movingY "
             />
 
             <!-- Card__heading -->
@@ -432,12 +432,12 @@
             </div>
           </div>
           <!--Popular Card 4-->
-          <div class="popular_card bg-green-950 p-10 pt-24 rounded-md relative">
+          <div class="group  popular_card bg-green-950 p-10 pt-24 rounded-md relative">
             <!-- Card__img -->
             <img
               src="assets/img/cart-4.png"
               alt="popular_image"
-              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500"
+              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500 group-hover:animate-movingY "
             />
 
             <!-- Card__heading -->
